--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         de México, y muchos otros destinos que nos esperan en esta galería.
         Acompáñennos en este viaje visual mientras exploramos el mundo a través de sus ciudades más 
         emblemáticas. ¡Disfruten del recorrido!</p>
-        <img  src="ciuda.avif" alt="No se puede mostrar la imagen" width=450   height="450" >
+        <img  src="cid.jpg" alt="No se puede mostrar la imagen" width=450   height="450" >
        </article>
     </section>
     <footer>Copyright &copy; itorizaba.edu.mx</footer>
